--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3.3"
 services:
   app:
     container_name: app
@@ -6,10 +6,24 @@ services:
     build: .
     ports:
       - "3000:3000"
-    links:
+    depends_on:
       - mongo
+    volumes:
+      - mongo-data:/app
+    networks:
+     - my-network
   mongo:
     container_name: mongo
     image: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+    networks:
+     - my-network
+# define volume to be created
+volumes:
+  mongo-data:
+# define network to be created
+networks:
+  my-network:
